--- a/web-projects/homepage/styles/styles.css
+++ b/web-projects/homepage/styles/styles.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 img {
-    wodth: 150px;
+    width: 150px;
     height: auto;
     border: 1px solid steelblue;
     box-shadow: 0 0 30px gray;
