--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,22 +6,35 @@
 nav {
     background-color: cornflowerblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    color: white;   
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 h1 {
     color: cornflowerblue;
+    border-bottom: 1px dotted cornflowerblue;
+    padding: 0.5rem;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
 
 main {
-    width: 50rem;
+    grid-column: 2/3;
+    margin: 1rem;
     font-size: 20px;
-    padding: 1rem;
 }
 
 main img {
@@ -41,6 +54,8 @@ aside {
     position: relative;
     width: 20rem;
     text-align: center;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside h2{
@@ -60,10 +75,17 @@ footer {
     text-align: center;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+
+
 /* Class Selectors */
 
 .box {
-    margin: 1rem;
+    margin: 0rem;
     border: 3px dashed midnightblue;
     padding: 1rem;
     background-color: cornflowerblue;
@@ -73,3 +95,4 @@ footer {
 .indent {
     padding-left: 2rem;
  }
+
