--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 nav {
@@ -15,13 +14,13 @@ nav a {
     display: block;
     padding: 0.5rem;
     text-decoration: none;
-    color: white;   
+    color: midnightblue;   
     font-size: 1.2rem;
     font-weight: 700;
 }
 
 h1 {
-    color: cornflowerblue;
+    color: midnightblue;
     border-bottom: 1px dotted cornflowerblue;
     padding: 0.5rem;
 }
@@ -34,7 +33,6 @@ h1 {
 main {
     grid-column: 2/3;
     margin: 1rem;
-    font-size: 20px;
 }
 
 main img {
