--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -60,8 +60,12 @@ article {
     width: 80%;
     top: 120px;
     left: 90px;
-    padding: 10px;
+    padding: 5px;
     color: white;
+}
+article >p {
+    margin: 0;
+    padding: 2px;
 }
 
 #happy-client {
@@ -70,16 +74,95 @@ article {
     float: right;
 }
 
-nav {
+header {
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
     background-color: var(--nav-background-color);
+    border-bottom: 10px double var(--accent2-color);
+}
+
+.logo {
+    margin: 0.5rem 4rem 0.5rem 4rem;
+    width: 150px;
+    height: auto;
+}
+
+nav {
     font-size: 1.2rem;
     display: flex;
+    justify-content: right;
 }
 
 nav a {
     display: block;
-    color: var(--nav--link-color);
+    color: royalblue;
+    font-weight: bold;
+    padding: 20px;
     text-decoration: none;
-    padding: 1rem;
 }
 
+nav a:hover {
+    color: var(--nav--link-color);
+    text-decoration: underline;
+}
+
+.history {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    background-color:  var(--nav-background-color);
+}
+
+.history >h2 {
+    background-color: var(--accent2-color);
+    grid-column: 1/4;
+    grid-row: 1;
+    text-align: center;
+}
+
+.history >p {
+    grid-row: 2;
+}
+
+.history >img {
+    width: 320px;
+    height: auto;
+    grid-row: 2;
+}
+
+.adventure {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    background-color:  var(--nav-background-color);
+}
+
+.adventure >h2 {
+    background-color: var(--accent2-color);
+    grid-column: 1/6;
+    grid-row: 1;
+    text-align: center;
+}
+
+figure {
+    grid-row: 2;
+    align-self: first baseline;
+    justify-self: center;
+}
+
+figure >img {
+    width: 150px;
+    height: auto;
+}
+
+footer {
+    display:grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    background-color: var(--accent2-color);   
+}
+
+footer >nav >a >img {
+    width: 50px
+}
