--- a/week05/Styles/poll-form.css
+++ b/week05/Styles/poll-form.css
@@ -73,7 +73,7 @@ button {
     justify-self: center;
     width: 150px;
     margin: 1rem;
-    background-color: darkslateblue;
+    background-color: darkblue;
     color: #fff;
     border: none;
     border-radius: 0.5rem;
