--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    padding: 25px;
+    padding: 15px;
     font-family: var(--paragraph-font);
     font-size: 1.2rem;
 }
@@ -102,7 +102,7 @@ nav a {
     text-decoration: none;
 }
 
-nav a:hover {
+.email >a:hover ,nav a:hover {
     color: var(--nav--link-color);
     text-decoration: underline;
 }
@@ -165,4 +165,105 @@ footer {
 
 footer >nav >a >img {
     width: 50px
+}
+
+.contactus {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 25px;
+    background-color: var(--nav-background-color);
+}
+.location {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.phone {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.email {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.contact {
+    display: grid;
+    border: 5px dotted var(--primary-color);
+    border-radius: 1rem;
+    background-color: var(--accent2-color);
+    padding: 10px;
+    margin: 10px;
+    justify-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.contact >img {
+    height: 80px;
+    border-radius: 1rem;
+}
+
+iframe {
+    height: 180px;
+    width: auto
+}
+.here {
+    display: grid;
+    grid-column: 2/4;
+    grid-row: 2;
+    font-size: 20px;
+    justify-items: center;
+}
+.submit {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    background-color: var(--accent2-color);
+    border-bottom: 10px double var(--primary-color);
+}
+.employee >figure >img {
+    height: 200px;
+    width: auto;
+    border-radius: 1rem;
+}
+form {
+    width: 500px;
+    margin: 0 auto;
+    padding: 1.5rem;
+    margin: 1rem;
+    border: 5px dotted var(--primary-color);
+    border-radius: 1rem;
+    background-color: var(--nav-background-color);
+}
+label, input, button, select, textarea {
+    font-family: 'Didact Gothic', serif;
+}
+label, form >p {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+input, textarea {
+    padding: 1.5px;
+    font-size: 1.2rem;
+}
+input[type="text"] {
+    width: 450px;
+}
+input[type="checkbox"]{
+    height: 1.2rem;
+    width: 1.2rem;
+}
+button {
+    justify-self: center;
+    width: 150px;
+    margin: 1rem;
+    background-color: var(--primary-color);
+    color: #fff;
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    background-color: var(--accent1-color);
 }
