--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,7 +43,7 @@ p {
     height: auto;
 }
 
-h1 {
+.hero >h1 {
     color: white;
     position: absolute;
     top: 20px;
@@ -176,14 +176,17 @@ footer >nav >a >img {
 .location {
     grid-column: 1/2;
     grid-row: 1/3;
+    line-height: 1.2rem;
 }
 .phone {
     grid-column: 2/3;
     grid-row: 1/2;
+    line-height: 1.2rem;
 }
 .email {
     grid-column: 3/4;
     grid-row: 1/2;
+    line-height: 0.2rem;
 }
 
 .contact {
@@ -196,6 +199,7 @@ footer >nav >a >img {
     justify-items: center;
     font-size: 1.5rem;
     font-weight: bold;
+    
 }
 
 .contact >img {
@@ -214,6 +218,12 @@ iframe {
     font-size: 20px;
     justify-items: center;
 }
+.here >h1 {
+    color: var(--primary-color);
+    font-size: 3.5rem;
+    line-height: 0;
+}
+
 .submit {
     display: grid;
     grid-template-columns: 1fr 2fr;
