--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -278,3 +278,115 @@ button {
 button:hover {
     background-color: var(--accent1-color);
 }
+
+button {
+    width: 300px;
+}
+
+
+
+.trips {
+    display: grid;
+    justify-items: center;
+    background-color: var(--accent2-color);
+}
+.trips >a {
+    font-size: 1.5rem;
+}
+.trips >h1 {
+    font-size: 3.5rem;
+    margin: 0;
+}
+.funtrips {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: var(--nav-background-color);
+}
+.funtrips >figure >img {
+    width: 110%;
+}
+table, th, td {
+    border-collapse:collapse;
+    border-spacing: 0;;
+    padding: 1rem;
+    margin: 1rem;
+    font-family: 'Didact Gothic', serif;
+    border-left: 1px solid var(--accent2-color);
+    border-right: 1px solid var(--accent2-color);
+}
+th {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+td {
+    font-size: 1.1rem;
+}
+tr:last-of-type {
+    border-bottom: 1px solid var(--accent2-color);;
+}
+thead >tr {
+    background-color: var(--accent2-color);
+}
+tbody >tr:nth-of-type(even) {
+    background-color: var(--nav-background-color);
+}
+
+.home-heading {
+    position: relative;
+}
+.home-heading img {
+    margin:0;
+    padding: 0;
+    border: 0;
+    width: 100%;
+    height: auto;
+}
+.home-heading >h1 {
+    color: white;
+    position: absolute;
+    top: 20%;
+    font-size: 3.5rem;
+    width: 100%;
+    text-align: center;
+    background-color:rgba(00,00,00,0.5);
+}
+.home-offer {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--nav-background-color);
+}
+.home-offer img {
+    width: 100%;
+    border-radius: 0.5rem;
+}
+.subscribe {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--accent2-color);
+    border-bottom: 10px double var(--primary-color);
+}
+.subscribe >a {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    font-size: 3rem;
+    justify-self: center;
+}
+.subscribe img {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    width: 400px;
+    border-radius: 0.5rem;
+    margin: 0;
+}
+.subscribe >form {
+    margin: 5px;
+    width: 400px;
+}
+.subscribe >form >h2 {
+    font-size: 3rem;
+    margin:0;
+}
+.subscribe >form >input[type="text"] {
+    width: 350px;
+}
